# cookiecutter-hatch

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  examples.yaml
{{cookiecutter.project_slug}}/docs/: conf.py  requirements.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
